tests/baselines/reference/declarationEmitTypeAliasTypeParameterExtendingUnknownSymbol.errors.txt
declarationEmitTypeAliasTypeParameterExtendingUnknownSymbol.ts(1,18): error TS2304: Cannot find name 'Unknown'.


==== declarationEmitTypeAliasTypeParameterExtendingUnknownSymbol.ts (1 errors) ====
    type A<T extends Unknown> = {}
                     ~~~~~~~
!!! error TS2304: Cannot find name 'Unknown'.